--- a/collect_app/src/main/res/layout/grid_view_halaman_utama.xml
+++ b/collect_app/src/main/res/layout/grid_view_halaman_utama.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"
         android:id="@+id/foto_bangunan_hal_utama"/>
 </LinearLayout>
