--- a/collect_app/src/main/res/layout/detail_foto_bs_modal.xml
+++ b/collect_app/src/main/res/layout/detail_foto_bs_modal.xml
@@ -8,27 +8,25 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="6dp"
+        card_view:cardCornerRadius="10dp"
         card_view:elevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/black_transparent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
+                android:textColor="@color/white"
                 android:text="Foto Bangunan"
                 android:textStyle="bold"
                 android:layout_gravity="center_horizontal"
                 android:textSize="17sp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:background="@color/colorPrimary"
-                />
+
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="300dp"
@@ -37,16 +35,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
                 android:text="Lihat Detail"
+                android:id="@+id/lihat_detail"
+                android:layout_marginTop="15dp"
+                android:padding="9dp"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:background="@drawable/ico_rounded"
-                android:layout_gravity="center_horizontal"/>
-
-
-
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="15dp"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
