--- a/collect_app/src/main/res/layout/activity_main_skripsi.xml
+++ b/collect_app/src/main/res/layout/activity_main_skripsi.xml
@@ -20,8 +20,7 @@
             android:orientation="vertical"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="#f1f1f1">
+            android:layout_alignParentStart="true">
             <!--<LinearLayout-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="50dp"-->
@@ -94,6 +93,20 @@
                 android:layout_height="40dp"
                 android:orientation="horizontal"
                 android:background="#f1f1f1">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"
+                    android:layout_marginLeft="7dp">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:id="@+id/select_all"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_select_all"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"/>
+                </RelativeLayout>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -114,14 +127,6 @@
                         android:layout_height="30dp"
                         android:id="@+id/sort_foto"
                         android:src="@drawable/ic_sort_main"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:id="@+id/sort_foto_merah"
-                        android:src="@drawable/ic_sort_main_merah"
-                        android:visibility="gone"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"/>
                 </RelativeLayout>
@@ -148,6 +153,16 @@
                 android:gravity="center"
                 android:horizontalSpacing="3dp"
                 android:verticalSpacing="3dp"></org.odk.collect.android.augmentedreality.ui.ExpandGridView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="120dp"
+                android:text="Belum ada data"
+                android:textSize="30sp"
+                android:visibility="gone"
+                android:id="@+id/blm_ada_data"
+                android:layout_gravity="center" />
         </LinearLayout>
     </ScrollView>
 
